name:                verba
version:             0.1.0.0
synopsis:            A Latin dictionary and morphological analyzer
description:         A Latin dictionary and morphological analyzer
homepage:            http://github.com/micxjo/verba
license:             BSD3
license-file:        LICENSE
author:              Micxjo Funkcio <micxjo@fastmail.com>
maintainer:          Micxjo Funkcio <micxjo@fastmail.com>
copyright:           (c) 2016 Micxjo Funkcio
category:            Natural language processing
build-type:          Simple
data-files:          data/inflects.lat data/dictline.gen
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     NLP.Verba, NLP.Verba.Parser, NLP.Verba.Types
  other-modules:       Paths_verba
  ghc-options:         -Wall -fwarn-incomplete-uni-patterns
  build-depends:       base >= 4.7 && < 5
                     , text
                     , attoparsec
  default-language:    Haskell2010

test-suite verba-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test.hs
  build-depends:       base
                     , verba
                     , tasty
                     , tasty-hunit
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/micxjo/verba
